--- a/src/app/header/header/header.component.scss
+++ b/src/app/header/header/header.component.scss
@@ -11,6 +11,7 @@
     background: var(--cor1);
     box-shadow: 1px 1px 3px 0 #444;
     overflow-x: hidden;
+    z-index: 99999;
     .logo{
         display: flex;
         flex-direction: row;
@@ -148,7 +149,7 @@
 }
 
 .close{
-    width: 360px;
+    width: 95px;
     // width: 96px;
     .title{
         white-space: nowrap;
@@ -168,6 +169,12 @@
     background-color: var(--cor1);
     border-radius: 5px;
     cursor: pointer;
+
+    &,.close{
+        span:nth-child(2){
+            display: none;
+        }
+    }
     .icon{
         color: white;
         position: absolute;
