--- a/src/app/header/header/header.component.scss
+++ b/src/app/header/header/header.component.scss
@@ -130,9 +130,9 @@
             // &:nth-child(2).active ~indicador {
             //     transform: translateY(calc(70px * 1));
             }
-            &:nth-child(3).active ~indicador {
-                transform: translateY(calc(70px * 2));
-            }
+            // &:nth-child(3).active ~indicador {
+            //     transform: translateY(calc(70px * 2));
+            // }
             // &:nth-child(4).active ~indicador {
             //     transform: translateY(calc(70px * 3));
             // }
