--- a/src/app/header/header/header.component.scss
+++ b/src/app/header/header/header.component.scss
@@ -118,8 +118,8 @@
                         height: 50px;
                         border-radius: 50%;
                         background: transparent;
-                        // pointer-events: none;
-                        // box-shadow: 35px -35px 0 10px white;
+                        pointer-events: none;
+                        box-shadow: 35px -35px 0 10px white;
                     }
                 }
             }
