enviando via origin branch

--- a/src/app/header/header/header.component.scss
+++ b/src/app/header/header/header.component.scss
@@ -118,7 +118,7 @@
                         height: 50px;
                         border-radius: 50%;
                         background: transparent;
-                        pointer-events: none;
+                        // pointer-events: none;
                         box-shadow: 35px -35px 0 10px white;
                     }
                 }
