--- a/src/app/header/header/header.component.scss
+++ b/src/app/header/header/header.component.scss
@@ -117,7 +117,7 @@
                         width: 50px;
                         height: 50px;
                         border-radius: 50%;
-                        background: transparent;
+                        // background: transparent;
                         // pointer-events: none;
                         box-shadow: 35px -35px 0 10px white;
                     }
