git branch nova

--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -12,7 +12,7 @@
       <li class="list" [ngClass]="{'active': btnActived == 0}" (click)="onActived(0)">
         <a href="#">
           <span class="icon"><i class="bi bi-house"></i></span>
-          <span class="title">Home</span>
+          <!-- <span class="title">Home</span> -->
         </a>
       </li>
       <li class="list" [ngClass]="{'active': btnActived == 1}" (click)="onActived(1)">
